# MUCLI

./: Cargo.toml  README.md
src/: ROADMAP.md  cli.rs  main.rs  models.rs
src/api/: mod.rs  weather_api.rs
src/cli_commands/: connection.rs  directory.rs  file.rs  images.rs  misc.rs  mod.rs  player.rs  system.rs
src/models/: MUCLI.rs  commands_traits.rs  file_commands.rs  mod.rs
